--- a/AgentWikiChat/appsettings.json
+++ b/AgentWikiChat/appsettings.json
@@ -69,7 +69,7 @@
       },
       {
         "Name": "Anthropic-Claude-Opus",
-        "Type": "Anthropic",
+        " Type": "Anthropic",
         "BaseUrl": "https://api.anthropic.com",
         "ApiKey": "",
         "Model": "claude-3-opus-20240229",
@@ -92,7 +92,7 @@
   "Database": {
     "_Comment": "Proveedores soportados: SqlServer, PostgreSQL. Cambia 'Provider' y 'ConnectionString' según tu necesidad.",
     "CommandTimeout": 90,
-    "ConnectionString": "Server=192.168.5.117;Database=db_nahuel_pruebas_old;User Id=USeguridad;Password=xr38yterw;TrustServerCertificate=True;",
+    "ConnectionString": "Server=miservidor;Database=mibase;User Id=miusuario;Password=mipass;TrustServerCertificate=True;",
     "EnableQueryLogging": true,
     "MaxRowsToReturn": 100,
     "Provider": "SqlServer"
@@ -111,41 +111,41 @@
   //  "PostgreSQL_Azure": "Host=myserver.postgres.database.azure.com;Database=mydb;Username=myuser@myserver;Password=YourPassword;SSL Mode=Require;"
   //}
   "SVN": {
+    "Provider": "SVN",
     "RepositoryUrl": "https://192.168.100.15/svn/RepDeTesting",
     "Username": "ffontanini",
     "Password": "12345678",
     "WorkingCopyPath": "C:\\Users\\ffontanini\\Music\\RepDeTesting",
     "CommandTimeout": 60,
     "EnableLogging": true,
-    "_Comment": "URL simplificada sin espacios ni caracteres especiales. El path específico 'IW_Efectivamente (VIEJO - NO USAR)' se puede navegar después con el parámetro 'path' de la tool."
+    "_Comment": "URL simplificada sin espacios ni caracteres especiales. El path específico 'IW_Efectivamente (VIEJO - NO USAR)' se puede navegar después con el parámetro 'path' de la tool. Provider: SVN (futuro: Git, Mercurial, TFS)"
   }
-  //"SVNExamples": {
-  //  "_Comment": "Ejemplos de configuración SVN. NO son usados en ejecución, solo referencia.",
-  //  "HTTP_WithAuth": {
+  //"VersionControlExamples": {
+  //  "_Comment": "Ejemplos de configuración para diferentes proveedores de control de versiones. NO son usados en ejecución, solo referencia.",
+  //  "SVN_HTTP_WithAuth": {
+  //    "Provider": "SVN",
   //    "RepositoryUrl": "http://svn.company.com/repos/project",
   //    "Username": "myuser",
   //    "Password": "mypassword"
   //  },
-  //  "HTTPS_WithAuth": {
+  //  "SVN_HTTPS_WithAuth": {
+  //    "Provider": "SVN",
   //    "RepositoryUrl": "https://svn.company.com/repos/project",
   //    "Username": "myuser",
   //    "Password": "mypassword"
   //  },
-  //  "SVN_Protocol": {
-  //    "RepositoryUrl": "svn://svn.company.com/repos/project",
-  //    "Username": "myuser",
-  //    "Password": "mypassword"
-  //  },
-  //  "File_Protocol": {
-  //    "RepositoryUrl": "file:///C:/SVNRepos/project",
-  //    "Username": "",
-  //    "Password": ""
-  //  },
-  //  "WithWorkingCopy": {
+  //  "SVN_WithWorkingCopy": {
+  //    "Provider": "SVN",
   //    "RepositoryUrl": "https://svn.company.com/repos/project",
   //    "Username": "myuser",
   //    "Password": "mypassword",
   //    "WorkingCopyPath": "C:/Projects/MyProject"
+  //  },
+  //  "Git_Future": {
+  //    "Provider": "Git",
+  //    "RepositoryUrl": "https://github.com/company/project.git",
+  //    "Username": "myuser",
+  //    "Password": "token_or_password"
   //  }
   //}
 }
