Agregar uso de GEMINI

--- a/AgentWikiChat/appsettings.json
+++ b/AgentWikiChat/appsettings.json
@@ -27,7 +27,7 @@
     "SaveOnExit": true
   },
   "AI": {
-    "ActiveProvider": "LMStudio-Local",
+    "ActiveProvider": "Gemini-Flash",
     "Providers": [
       {
         "Name": "Ollama-Local",
@@ -83,6 +83,26 @@
         "BaseUrl": "https://api.anthropic.com",
         "ApiKey": "",
         "Model": "claude-3-5-sonnet-20241022",
+        "Temperature": 0.7,
+        "MaxTokens": 8192,
+        "TimeoutSeconds": 120
+      },
+      {
+        "Name": "Gemini-Pro",
+        "Type": "Gemini",
+        "BaseUrl": "https://generativelanguage.googleapis.com",
+        "ApiKey": "mitoken",
+        "Model": "gemini-2.5-pro",
+        "Temperature": 0.7,
+        "MaxTokens": 8192,
+        "TimeoutSeconds": 120
+      },
+      {
+        "Name": "Gemini-Flash",
+        "Type": "Gemini",
+        "BaseUrl": "https://generativelanguage.googleapis.com",
+        "ApiKey": "mitoken",
+        "Model": "gemini-2.5-flash",
         "Temperature": 0.7,
         "MaxTokens": 8192,
         "TimeoutSeconds": 120
